--- a/styles.css
+++ b/styles.css
@@ -145,34 +145,37 @@ footer {
 }
 
 .modal {
+  display: none;
   position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5)
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
   background-color: #fefefe;
-  padding: 2rem;
+  margin: 15% auto;
+  padding: 20px;
   border: 1px solid #888;
   width: 80%;
   max-width: 500px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .close {
-  color: #aaa;
+  color: #aaaaaa;
+  float: right;
   font-size: 28px;
   font-weight: bold;
-  position: absolute;
-  right: 15px;
-  top: 10px;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
   cursor: pointer;
 }
 
