--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-myModal {
-  display: none;
-}
 
 body {
   font-family: Arial, sans-serif;
@@ -156,9 +153,12 @@ footer {
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 
 .modal-content {
   background-color: #fefefe;
