--- a/styles.css
+++ b/styles.css
@@ -253,4 +253,18 @@ form textarea {
   font-weight: 300;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
+header nav {
+  text-align: center;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  display: inline-block;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 1rem;
+}
 
