--- a/styles.css
+++ b/styles.css
@@ -235,11 +235,13 @@ form textarea {
 .plans-intro {
   background-color: #2c3e50;
   color: #fff;
-  padding: 30px 0; /* Reduce padding from 50px to 30px */
+  padding: 50px 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  margin-top: 70px; /* Add this line */
 }
+
 
 .plans-intro h2 {
   font-size: 36px; /* Reduce font size from 48px to 36px */
