--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  background-color: #f0f0f0;
+  background-color: #1464db; /* Change the background color to match the header */
 }
 
 header {
@@ -13,7 +13,9 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%; /* Add this line to make the header stretch across the screen */
 }
+
 
 header a.logo {
   color: #fff;
