--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 header {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  ;
   color: #fff;
   padding: 1rem;
   display: flex;
@@ -78,11 +78,11 @@ nav ul li a:hover {
 .services h2 {
   text-align: center;
   margin-bottom: 2rem;
-  color: #333;
+  background: linear-gradient(135deg, #6b73ff, #000dff);
 }
 
 .service {
-  background-color: #fff;
+  background: linear-gradient(135deg, #6b73ff, #000dff);
   border-radius: 5px;
   padding: 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -101,11 +101,11 @@ nav ul li a:hover {
 }
 
 .service h3 {
-  color: #333;
+  background: linear-gradient(135deg, #6b73ff, #000dff);
 }
 
 .service p {
-  color: #666;
+  background: linear-gradient(135deg, #6b73ff, #000dff);
 }
 
 .service-details {
