--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,6 @@ nav ul li a:hover {
   background: linear-gradient(135deg, #6b73ff, #000dff);
   padding: 3rem;
   text-align: center;
-  color: #fff;
 }
 
 .hero h1 {
@@ -82,7 +81,7 @@ nav ul li a:hover {
 }
 
 .service {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #fff;
   border-radius: 5px;
   padding: 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -101,7 +100,7 @@ nav ul li a:hover {
 }
 
 .service h3 {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #fff;
 }
 
 .service p {
