--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,7 @@ body {
 }
 
 header {
-  ;
-  background: linear-gradient(135deg, #6b73ff, #000dff)
+  background: linear-gradient(135deg, #6b73ff, #000dff);
   padding: 1rem;
   display: flex;
   justify-content: space-between;
