--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  background: #fff; /* Change the background color to match the header */
+  background: linear-gradient(135deg, #6b73ff, #000dff)
 }
 
 header {
