--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
   line-height: 1.6;
   margin: 0;
   padding: 0;
-  background: linear-gradient(135deg, #6b73ff, #000dff)
+  background: #313cff;
 }
 
 header {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #313cff;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -76,11 +76,11 @@ nav ul li a:hover {
 .services h2 {
   text-align: center;
   margin-bottom: 2rem;
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #fff;
 }
 
 .service {
-  background: #fff;
+  background: #313cff;
   border-radius: 5px;
   padding: 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -99,11 +99,11 @@ nav ul li a:hover {
 }
 
 .service h3 {
-  background: #fff;
+  background: #313cff;
 }
 
 .service p {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #fff;
 }
 
 .service-details {
