--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ nav ul li a:hover {
 }
 
 .hero {
-  background: linear-gradient(135deg, #6b73ff, #000dff);
+  background: #313cff;
   padding: 3rem;
   text-align: center;
 }
