--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ nav ul li a:hover {
 }
 
 .hero {
-  background: #2c3e50;
+  background: #040fe6;
   padding: 3rem;
   text-align: center;
 }
@@ -80,7 +80,7 @@ nav ul li a:hover {
 }
 
 .service {
-  background: #2c3e50;
+  background: #040fe6;
   border-radius: 5px;
   padding: 1rem;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
@@ -99,7 +99,7 @@ nav ul li a:hover {
 }
 
 .service h3 {
-  background: #2c3e50;
+  background: #040fe6;
 }
 
 .service p {
@@ -305,5 +305,5 @@ nav ul li {
   display: flex;
   justify-content: center;
   padding: 10px 0;
-  background: #2c3e50
+  background: #040fe6
 }
