--- a/styles.css
+++ b/styles.css
@@ -45,13 +45,16 @@ nav ul li a:hover {
   background: #040fe6;
   padding: 3rem;
   text-align: center;
+  margin-top: -20px;
 }
 
 .hero h1 {
+  color: white;
   font-size: 3rem;
 }
 
 .hero p {
+  color: white;
   font-size: 1.2rem;
 }
 
