--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,7 @@ nav ul li a:hover {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.5s ease-out;
+  color: white
 }
 
 .service-details.open {
