--- a/styles.css
+++ b/styles.css
@@ -239,6 +239,11 @@ form textarea {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
+.review p {
+  color: black;
+}
+
+
 .stars {
   font-size: 1.5rem;
   color: gold;
