--- a/styles.css
+++ b/styles.css
@@ -16,22 +16,18 @@ header {
   width: 100%;
 }
 
-nav {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-60%);
-}
-
-
 nav ul {
   list-style: none;
   padding: 0;
-  display: flex;
-  justify-content: center; /* center the links within the navigation */
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 nav ul li {
-  margin-left: 1rem;
+  display: inline-block;
+  margin: 0 1rem;
 }
 
 nav ul li a {
@@ -47,6 +43,7 @@ nav ul li a {
 nav ul li a:hover {
   background: #104f9e;
 }
+
 
 
 .hero {
