--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,24 @@ header {
   background: #313cff;
   padding: 1rem;
   display: flex;
-  justify-content: space-between;
   align-items: center;
   width: 100%;
+}
+
+nav {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+  display: flex;
+  justify-content: center; /* center the links within the navigation */
 }
 
 nav ul li {
-  display: inline-block;
-  margin: 0 1rem;
+  margin-left: 1rem;
 }
 
 nav ul li a {
@@ -43,7 +44,6 @@ nav ul li a {
 nav ul li a:hover {
   background: #104f9e;
 }
-
 
 
 .hero {
