--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,13 @@ body {
 
 header {
   background: #313cff;
-  padding: 1rem;
+  padding: 2rem; /* Increase the padding from 1rem to 2rem */
   display: flex;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
 }
+
 
 nav {
   position: absolute;
