--- a/styles.css
+++ b/styles.css
@@ -19,9 +19,9 @@ header {
 
 nav {
   position: absolute;
+  top: 20px; /* adjust the top value as desired */
   left: 50%;
   transform: translateX(-50%);
-  padding-top: 10px;
 }
 
 nav ul {
@@ -31,9 +31,12 @@ nav ul {
   justify-content: center;
 }
 
-
 nav ul li {
   margin-left: 1rem;
+}
+
+nav ul li:first-child {
+  margin-left: 0;
 }
 
 nav ul li a {
@@ -44,11 +47,9 @@ nav ul li a {
   padding: 0.5rem;
   border-radius: 5px;
   transition: background 0.3s;
+  margin: 5px; /* add margin to space out the links */
 }
 
-nav ul li a:hover {
-  background: #104f9e;
-}
 
 
 .hero {
