--- a/styles.css
+++ b/styles.css
@@ -42,15 +42,23 @@ nav ul li:first-child {
 }
 
 nav ul li a {
+  display: inline-block;
+  background-color: #313cff;
   color: #fff;
   text-decoration: none;
   font-size: 1.2rem;
   font-weight: bold;
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
   border-radius: 5px;
   transition: background 0.3s;
-  margin: 5px; /* add margin to space out the links */
+  border: 2px solid #313cff; /* Add a border */
+  margin-top: 10px; /* Add some space above the links */
 }
+
+nav ul li a:hover {
+  background: #104f9e;
+}
+
 
 
 
